fix: hide scrollbar

--- a/Frontend/src/app/google-contacts/components/contacts-page/contacts-page.component.scss
+++ b/Frontend/src/app/google-contacts/components/contacts-page/contacts-page.component.scss
@@ -4,7 +4,7 @@
 }
 
 .body-container {
-  min-height: calc(100vh - 64px);
+  height: calc(100vh - 64px);
   background-color: white !important;
 }
 
